  * Several searching improvements have been made
    - Searching again with / will repeat the last search
    - Searching again with ? will repeat the last search in reverse
    - hlsearch no longer highlights old searches when starting a new search
    - hlsearch will allow you to backspace out of a search completely now.
      Previously it would always highlight the last char of search being
      backspaced out of.
    - hlsearch will properly highlight the previous search when you
      backspace out of a search completely

  * Fix issue #345 - cgdb can now be configured to be built without
    the need to also build documentation. To disable documentation,
    pass --enable-docs=no or --disable-docs to the configure options.
    This is useful when building on systems that don't have the
    makeinfo executable available.

  * Fix issue #352 - gdb target output was not being displayed in cgdb.
    CGDB previously ignored target output from GDB. This prevented useful
    target output messages from being displayed back to the user in the
    gdb console output window. CGDB now correctly displays target output
    when remote debugging, including both from gdbserver directly or when
    debugging a program through valgrind using the --vgdb-error=0 option.

  * When selecting breakpoints with the space bar in the source viewer,
    CGDB now selects breakpoints using an absolute path to the file
    instead of a relative path. This prevents breakpoints being set on files
    with the same base name.

  * Fix issue #293 - Random breakpoints are no displayed on file reload
    Previously, when running cgdb, if you change a file you are debugging,
    recompile the exe, and 'run' again in the gdb window in cgdb, cgdb would
    reload the changed file and sometimes display garbage breakpoints.
    Now only the correct breakpoints are displayed on reload.

  * Fix issue #303 - CGDB crashes while resizing window